ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: main-ingress
spec:
  tls:
  - hosts:
    - n8n.devhub.io.vn
    secretName: n8n-tls
  ingressClassName: nginx
  rules:
    - host: n8n.devhub.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port: 
                  number: 80
    - host: registry.devhub.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
